tests/parse_print/random_perturb/set01/change-10/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-10/change-10.essence line 3, column 21:
Unsupported attributes for set: sizB
Only these are supported: size, minSize, maxSize
    line 3, column 21
    find x : set (sizB 2) of int(1..3)
                     ^^^^^^^